src/test/deca/context/invalid/sansObjet/lValue.deca
// Description :
//    L-value invalide : côté gauche d'une affectation non modifiable.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 10 : left-hand side of assignment is not an lvalue

{
    int x;
    1 = x;
}